[gd_scene load_steps=5 format=2]

[ext_resource path="res://assets/fonts/Staatliches-Regular.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://src/menus/Title.gd" type="Script" id=2]

[sub_resource type="DynamicFont" id=1]
size = 40
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
size = 24
font_data = ExtResource( 1 )

[node name="Title" type="Node2D"]
script = ExtResource( 2 )

[node name="ColorRect" type="ColorRect" parent="."]
margin_right = 1280.0
margin_bottom = 720.0
color = Color( 0.278431, 0.160784, 0.160784, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="."]
anchor_right = 0.5
margin_left = 504.141
margin_top = 205.26
margin_right = 748.141
margin_bottom = 308.26
custom_fonts/font = SubResource( 1 )
text = "Risky Brain
"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PlayButton" type="Button" parent="."]
margin_left = 491.369
margin_top = 336.399
margin_right = 755.369
margin_bottom = 440.399
rect_pivot_offset = Vector2( -63.654, 52 )
custom_fonts/font = SubResource( 2 )
text = "Play"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MultiplayerButton" type="Button" parent="."]
margin_left = 487.802
margin_top = 492.185
margin_right = 751.802
margin_bottom = 596.185
rect_pivot_offset = Vector2( -63.654, 52 )
custom_fonts/font = SubResource( 2 )
text = "Multiplayer"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CreditsButton" type="Button" parent="."]
margin_left = 1100.32
margin_top = 639.271
margin_right = 1238.32
margin_bottom = 688.271
rect_pivot_offset = Vector2( -63.654, 52 )
custom_fonts/font = SubResource( 2 )
text = "Credits"
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="PlayButton" to="." method="_on_PlayButton_pressed"]
[connection signal="pressed" from="MultiplayerButton" to="." method="_on_MultiplayerButton_pressed"]
[connection signal="pressed" from="CreditsButton" to="." method="_on_CreditsButton_pressed"]
